# c-demos

./: .gitignore  README.md
hw01/: CMakeLists.txt  assignment.ad  base58.c
hw02/: CMakeLists.txt  SudokuTest.txt  assignment.ad  main.c  sudoku.c  sudoku.h
hw03/: CMakeLists.txt  assignment.ad  main.c  scheduler.c  scheduler.h
hw04/: CMakeLists.txt  assignment.ad
hw04/src/: CMakeLists.txt  ini_parser.c  ini_parser.h  main.c  view.h
hw04/test/: CMakeLists.txt  cut.h  view.c
hw05/: CMakeLists.txt  assignment.ad  tar.c
hw05/blabla/hovno/: obsah_test.txt
seminar-02/: CMakeLists.txt  assignment.adoc  drawer.c
seminar-03/: CMakeLists.txt  assignment.adoc  main.c
seminar-04/: CMakeLists.txt  assignment.adoc  matrix.c  tictac.c
seminar-05/: CMakeLists.txt  assignment.adoc  playground.c  stringLibrary.c  stringLibrary.h  unit_tests.c
seminar-06/: CMakeLists.txt  assignment.adoc  dynamicLib.c  dynamicLib.h  playground.c  unit_tests.c
seminar-07/: CMakeLists.txt  assignment.adoc  list.c  list.h  list_utils.c  list_utils.h  main.c
seminar-07/tests/: bonus_tests.c  test_utils.c  test_utils.h  tests.c
seminar-08/: CMakeLists.txt  assignment.adoc  censor.c  cipher.c  filesort.c  getline.c  getline.h  list.c  list.h  list_utils.c  list_utils.h  packets.c  playground.c  readline.c
seminar-08/data/: gone-original.txt
seminar-08/input/: c-original.txt
seminar-09/: CMakeLists.txt  assignment.adoc  playground.c  stack.c  stack.h  tree.c  tree.h
seminar-10/: CMakeLists.txt  assignment.adoc  perl.h  playground.c  queue.c  queue.h  tests.c
seminar-11/: assignment.adoc  jozin.txt  main.c
